--- a/src/players-tables/_players-tables.scss
+++ b/src/players-tables/_players-tables.scss
@@ -59,7 +59,13 @@
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;  
             overflow: hidden;
-            line-break: anywhere;
+
+            &.with-space {
+                line-break: normal;
+            }
+            &.without-space {
+                line-break: anywhere;
+            }
     
             &.dark {
                 color: #012c3c;
